k8s/argo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.lab.moabukar.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              # name: https
              number: 443
  tls:
  - hosts:
    - argocd.lab.moabukar.co.uk
    secretName: argocd-tls
